[workspace]

[package]
name = "leptos-styles-test-app"
version = "0.1.0"
edition = "2024"

[package.metadata.leptos]
output-name = "leptos-styles-test-app"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:4200"
reload-port = 4201
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = ["leptos/hydrate"]
ssr = ["dep:axum", "dep:leptos_axum", "dep:tokio", "leptos/ssr"]

[dependencies]
axum = { version = "0.8.8", optional = true }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = [] }
leptos_axum = { version = "0.8.7", optional = true }
leptos-styles = { path = "../.." }
tokio = { version = "1.50.0", features = ["rt-multi-thread"], optional = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.118"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
